Modification des keyframes

--- a/style/a-propos.css
+++ b/style/a-propos.css
@@ -11,53 +11,28 @@
 }
 
 @keyframes move-bg {
-  0% {
-      background-position: center 0
-  }
-
-  to {
-      background-position: center -500px
-  }
+  0% { background-position: center 0; }
+  to { background-position: center -500px; }
 }
 
 @-webkit-keyframes move-bg {
-  0% {
-      background-position: center 0
-  }
-
-  to {
-      background-position: center -500px
-  }
+  0% { background-position: center 0; }
+  to { background-position: center -500px; }
 }
 
 @-moz-keyframes move-bg {
-  0% {
-      background-position: center 0
-  }
-
-  to {
-      background-position: center -500px
-  }
+  0% { background-position: center 0; }
+  to { background-position: center -500px; }
 }
 
 @-o-keyframes move-bg {
-  0% {
-      background-position: center 0
-  }
-
-  to {
-      background-position: center -500px
-  }
+  0% { background-position: center 0; }
+  to { background-position: center -500px; }
 }
 
 @-ms-keyframes move-bg {
-  0% {
-      background-position: center 0
-  }
-
-  to {
-      background-position: center -500px
-  }
+  0% { background-position: center 0; }
+  to { background-position: center -500px; }
 }
 
 .carre-contenu {
