--- a/style/a-propos.css
+++ b/style/a-propos.css
@@ -1,5 +1,5 @@
 .a-propos-section {
-  background: #051622 url(/images/bg_star.png) repeat-y;
+  background: #051622 url(../images/bg_star.png) repeat-y;
   animation: move-bg  60s linear;
   animation-fill-mode: forwards;
 }
