--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,64 +1,39 @@
 
 .portfolio-section {
-  background: #051622 url(/images/bg_star.png) repeat-y;
+  background: #051622 url(../images/bg_star.png) repeat-y;
   animation: move-bg  60s linear;
   animation-fill-mode: forwards;
 }
 .portfolio-section-photos {
-  background: #051622 url(/images/bg_star.png) repeat-y;
+  background: #051622 url(../images/bg_star.png) repeat-y;
   animation: move-bg  60s linear;
   animation-fill-mode: forwards;
   padding: 20px;
   }
 
   @keyframes move-bg {
-    0% {
-        background-position: center 0
-    }
-  
-    to {
-        background-position: center -500px
-    }
+    0% { background-position: center 0; }
+    to { background-position: center -500px; }
   }
-
+  
   @-webkit-keyframes move-bg {
-    0% {
-        background-position: center 0
-    }
-  
-    to {
-        background-position: center -500px
-    }
+    0% { background-position: center 0; }
+    to { background-position: center -500px; }
   }
-
+  
   @-moz-keyframes move-bg {
-    0% {
-        background-position: center 0
-    }
-  
-    to {
-        background-position: center -500px
-    }
+    0% { background-position: center 0; }
+    to { background-position: center -500px; }
   }
-
+  
   @-o-keyframes move-bg {
-    0% {
-        background-position: center 0
-    }
-  
-    to {
-        background-position: center -500px
-    }
+    0% { background-position: center 0; }
+    to { background-position: center -500px; }
   }
-
-  @-ms-keyframes move-bg {
-    0% {
-        background-position: center 0
-    }
   
-    to {
-        background-position: center -500px
-    }
+  @-ms-keyframes move-bg {
+    0% { background-position: center 0; }
+    to { background-position: center -500px; }
   }
   
   .portfolio-section-photos h2 {
