--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,10 @@
     h1 {
       font-size: 2em;
     }
+
+    .lien-icone {
+      margin-left: 0px;
+    }
   
     section {
       padding: 50px 20px 50px 20px;
