Correction taille police a propos et portfolio

--- a/style/a-propos.css
+++ b/style/a-propos.css
@@ -92,9 +92,16 @@
     .carre-contenu {
       width: 65%;
     }
-   
+    p,li {
+      font-size: 12px;
+    }
+    
    td {
     padding: 10px 5px 10px 5px;
+    font-size: 12px;
    }
-   
+
+   th {
+    font-size: 14px;
+   }
   }
