--- a/style/a-propos.css
+++ b/style/a-propos.css
@@ -38,14 +38,14 @@
 .carre-contenu {
     border-right: 1px solid #deb992;
     border-bottom: 1px solid #deb992;
-    padding: 50px;
-    width: 100%;
+    padding: 20px;
+    width: 80%;
     margin: auto;
     margin-bottom: 80px;
   }
   
   .carre-contenu h2 {
-    margin-top: 30px;
+    margin-top: 80px;
     color: #deb992;
   }
   
@@ -64,7 +64,7 @@
   table {
     color: #deb992;
     text-align: center;
-    width: 100%;
+ margin: auto;
     border-collapse: collapse;
   }
   
@@ -79,7 +79,7 @@
   }
   
   h2 {
-    margin-bottom: 80px;
+    margin-bottom: 50px;
   }
   
   h1,
