--- a/style/style.css
+++ b/style/style.css
@@ -101,6 +101,7 @@
     .lien-icone {
       margin-left: 0px;
       padding: 10px;
+      gap: 5px;
     }
   
     section {
@@ -110,6 +111,8 @@
     nav a {
       margin-left: 10px;
       margin-right: 10px;
+      padding: 10px;
+      gap: 5px;
     }
 
   }
