Fond d'écran png remplacé par webp

--- a/style/a-propos.css
+++ b/style/a-propos.css
@@ -1,11 +1,11 @@
 .a-propos-section {
-  background: #051622 url(../images/bg_star.png) repeat-y;
+  background: #051622 url(../images/bg_star.webp) repeat-y;
   animation: move-bg  60s linear;
   animation-fill-mode: forwards;
 }
 
 .section-tarifs {
-  background: #051622 url(../images/bg_star.png) repeat-y;
+  background: #051622 url(../images/bg_star.webp) repeat-y;
   animation: move-bg  60s linear;
   animation-fill-mode: forwards;
 }
